==> inxware/ert-components/target/os-arch/esp32s3_freertos-xtensa/target_wifi.c <==
#include "target_config.h"
#include "hal_string.h"
#include "target.h"
#include "wifi_station.h"
#include "target_wifi.h"
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/event_groups.h"
#include "esp_system.h"
#include "esp_wifi.h"
#include "esp_wpa2.h"
#include "esp_event.h"
#include "esp_log.h"
#include "nvs_flash.h"
#include "esp_netif.h"
#include "lwip/err.h"
#include "lwip/sys.h"
#include "esp_err.h"
#include "esp_check.h"
#include <unistd.h>
#define TAG "wifi-station"
#define WIFI_CONNECTED_BIT  BIT0
#define WIFI_FAIL_BIT       BIT1
#define MACIP_LENGTH 20
#define ESP32_WIFI_RECONNECT_DELAY_MS 2500
#define ESP32_SCAN_RECONNECT_DELAY_MS 1000
#define ESP32_MAX_AP_RECORDS 20

ehs_bool WifiStationScanResult(ehs_uint32 index, ehs_char* ssid, ehs_uint16 ssid_size, ehs_char* bssid, ehs_uint16 bssid_size,
                               ehs_sint32* channel, ehs_sint32* rssi)
{
    if(ssid_size < 33 || bssid < 6){
        return EHS_FALSE;
    }
    if(index < ESP32_MAX_AP_RECORDS){
        const wifi_ap_record_t* p_ap_record = &(s_ap_records[index]);
        if(p_ap_record && p_ap_record->ssid && strlen(p_ap_record->ssid) > 0){
            if(ssid) {
                int len = strlen(p_ap_record->ssid);
                if(len < 33){
                    EhsMemcpy(ssid, (const ehs_char*)p_ap_record->ssid, sizeof(ehs_char) * len+1);
                    ssid[len+1] = '\0';
                }
            }
            if(bssid) {
                EhsMemcpy(bssid, (const ehs_char*)p_ap_record->bssid, sizeof(ehs_char) * 6);
            }
            if(channel) *channel = (ehs_sint32)(p_ap_record->primary);
            if(rssi) *rssi = (ehs_sint32)(p_ap_record->rssi);
            return EHS_TRUE;
        }
    }
    return EHS_FALSE;
}

ehs_bool doWifiStationNetifInit(const ehs_char* host_name)
{
    esp_err_t ret = ESP_OK;
        
    if (sfWifiStationNetifGet() != EHS_TRUE)
    {
        ESP_GOTO_ON_ERROR(esp_netif_init(), doWifiStationInit_Return, TAG, "Network Interface init failed");
        ESP_GOTO_ON_ERROR(esp_event_loop_create_default(), doWifiStationInit_Return, TAG, "Event loop creation failed");
        sta_netif = esp_netif_create_default_wifi_sta();
        if(sta_netif){
            if(host_name) {
                ESP_LOGI(TAG, "Station hostname:%s",host_name);
                esp_netif_set_hostname(sta_netif, host_name);
            }
            ESP_LOGI(TAG, "Station Initalised!");
            sfWifiStationNetifSet(EHS_TRUE);
        }else{
            ret = ESP_FAIL;
            goto doWifiStationInit_Return;
        }
    }
doWifiStationInit_Return:
    return (ret == ESP_OK) ? EHS_TRUE : EHS_FALSE;
}

void doWifiStationNetifDestroy()
{
    if (sfWifiStationNetifGet() == EHS_TRUE)
    {
        sfWifiStationNetifSet(EHS_FALSE);
        if(sta_netif){
            esp_netif_destroy_default_wifi(sta_netif);
            sta_netif = NULL;
        }
        ESP_ERROR_CHECK_WITHOUT_ABORT(esp_event_loop_delete_default());
        ESP_ERROR_CHECK_WITHOUT_ABORT(esp_netif_deinit());
    }
}

eWifiStationStatus doWifiStationConnect(
    ehs_char    *ssid,
    ehs_uint8   type,
    ehs_char    *PSKPass,
    ehs_uint8   EnterpriseType,
    ehs_uint8   EAP,
    ehs_uint8   TTLS2,
    ehs_bool    needServerCert,
    ehs_char    *serverCert,
    ehs_char    *tlsCert,
    ehs_char    *tlsKey,
    ehs_char    *eapID,
    ehs_char    *eapUser,
    ehs_char    *eapPass,
    ehs_char    *ip_address,
    ehs_char    *mac_address,
    ehs_sint8   *rssi
)
{
    esp_err_t ret = ESP_OK;

    eWifiStationConnectState conn_state = getWifiStationConnectState();

    if(conn_state == WifiStationConnectState_CONNECT){ // initalise a connect

        ehs_char* host_name = NULL; // @TODO - set it as optional fb param
        if(doWifiStationNetifInit(host_name) == EHS_FALSE){ // @TODO - this may only have to be initalised in the main thread
            ret = ESP_ERR_WIFI_NOT_INIT;
            goto doWifiStationConnect_Return;
        }
        gWifiStationInitalised = EHS_TRUE;
        wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
        ESP_GOTO_ON_ERROR(esp_wifi_init(&cfg), doWifiStationConnect_Return, TAG, "Wi-Fi init failed");
        ESP_GOTO_ON_ERROR(esp_wifi_set_ps(WIFI_PS_NONE), doWifiStationConnect_Return, TAG, "Wi-Fi setting power saver failed");
        
        s_retry_num = 0;

        ESP_GOTO_ON_ERROR(esp_event_handler_instance_register(
                        WIFI_EVENT,
                        ESP_EVENT_ANY_ID,
                        &event_handler,
                        NULL,
                        &instance_any_id), doWifiStationConnect_Return, TAG, "Event handler (ANY_ID) registration failed");
        ESP_GOTO_ON_ERROR(esp_event_handler_instance_register(
                        IP_EVENT,
                        IP_EVENT_STA_GOT_IP,
                        &event_handler,
                        NULL,
                        &instance_got_ip), doWifiStationConnect_Return, TAG, "Event handler (GOT_IP) registration failed");

        ESP_GOTO_ON_ERROR(esp_wifi_set_storage(WIFI_STORAGE_RAM), doWifiStationConnect_Return, TAG, "Wi-Fi storage setting failed");
        wifi_config_t wifi_config;
        switch (type) {
            case Type_WifiStation_PSK:
                if (PSKPass[0] == 0) return WifiStation_AuthFailed;
                EhsStrcpy(wifi_config.sta.ssid, ssid); wifi_config.sta.ssid[strlen(ssid)] = '\0';
                EhsStrcpy(wifi_config.sta.password, PSKPass); wifi_config.sta.password[strlen(PSKPass)] = '\0';
                wifi_config.sta.pmf_cfg.required = false;
                ESP_LOGW(TAG, "SSID: [%s], password: [%s]", wifi_config.sta.ssid, wifi_config.sta.password);
                break;
            case Type_WifiStation_Open:
                EhsStrcpy(wifi_config.sta.ssid, ssid);
                wifi_config.sta.threshold.authmode = WIFI_AUTH_OPEN;
                wifi_config.sta.pmf_cfg.required = false;
                break;
            case Type_WifiStation_Enterprise:
                switch (EnterpriseType) {
                    case Enterprise_WifiStation_WPA2:
                    case Enterprise_WifiStation_WPA3:
                        EhsStrcpy(wifi_config.sta.ssid, ssid);
                        break;
                    case Enterprise_WifiStation_WPA3_192Bit:
                        EhsStrcpy(wifi_config.sta.ssid, ssid);
                        wifi_config.sta.pmf_cfg.required = true;
                        break;
                    default:
                        doWifiStationDestroy();
                        return WifiStation_InvalidArg;
                }
                break;
            default:
                doWifiStationDestroy();
                return WifiStation_InvalidArg;
        }
        // Set to scan all channels in case the AP's channel changes
        wifi_config.sta.scan_method = WIFI_ALL_CHANNEL_SCAN;
        // Set Wi-Fi failure re-connect attempt to 10
        wifi_config.sta.failure_retry_cnt = 10;
        // Reset the channel field to 0, it will be identified by Wifi scan
        wifi_config.sta.channel = 0;
        // Reset the BSSID by setting it to zero (no specific BSSID)
        memset(wifi_config.sta.bssid, 0, sizeof(wifi_config.sta.bssid));
        // @TODO - Once BSSID is configurable make sure to copy it to wifi_config.bssid from the config passed into this function 
        
        ESP_GOTO_ON_ERROR(esp_wifi_set_mode(WIFI_MODE_STA), doWifiStationConnect_Return, TAG, "Wi-Fi Mode settnig failed");
        ESP_GOTO_ON_ERROR(esp_wifi_set_config(WIFI_IF_STA, &wifi_config),doWifiStationConnect_Return, TAG, "Wi-Fi configure failure");

        if (type == Type_WifiStation_Enterprise)
        {
            ESP_GOTO_ON_ERROR( esp_wifi_sta_wpa2_ent_set_identity( (uint8_t *) eapID, strlen(eapID) ),\
                            doWifiStationConnect_Return, TAG, "Enterprise ID configure failure" );
            if (needServerCert == EHS_TRUE || EnterpriseType == Enterprise_WifiStation_WPA3 || EnterpriseType == Enterprise_WifiStation_WPA3_192Bit)
            {
                // check file existance and read out content into buffer
                if (readValidFile_into_buffer(serverCert, serverCert_content) == EHS_FALSE)
                {
                    doWifiStationDestroy();
                    return WifiStation_FileNotFound;
                }
                ESP_GOTO_ON_ERROR( esp_wifi_sta_wpa2_ent_set_ca_cert( serverCert_content, strlen(serverCert_content) ),\
                                doWifiStationConnect_Return, TAG, "Enterprise Server cert configure failed");
            }
            switch (EAP)
            {
                case EAP_WifiStation_TLS:
                    if (readValidFile_into_buffer(tlsCert, tlsCert_content) == EHS_FALSE ||
                        readValidFile_into_buffer(tlsKey, tlsKey_content) == EHS_FALSE)
                    {
                        doWifiStationDestroy();
                        return WifiStation_FileNotFound;
                    }
                    ESP_GOTO_ON_ERROR( esp_wifi_sta_wpa2_ent_set_cert_key( tlsCert_content, strlen(tlsCert_content),\
                                                                    tlsKey_content, strlen(tlsKey_content), NULL, 0 ),\
                                    doWifiStationConnect_Return, TAG, "Enterprise TLS configure failed");
                    break;
                
                case EAP_WifiStation_TTLS:
                    if (TTLS2 <= TTLS2_WifiStation_MIN || TTLS2 >= TTLS2_WifiStation_MAX)
                    {
                        doWifiStationDestroy();
                        return WifiStation_InvalidArg;
                    }
                    ESP_GOTO_ON_ERROR( esp_wifi_sta_wpa2_ent_set_ttls_phase2_method(TTLS2), doWifiStationConnect_Return, TAG, "TTLS Phase 2 configure failed" );
                    // No break here because it shares the same following two commands in PEAP method.

                case EAP_WifiStation_PEAP:
                    ESP_GOTO_ON_ERROR( esp_wifi_sta_wpa2_ent_set_username( (uint8_t *) eapUser, strlen(eapUser) ), doWifiStationConnect_Return, TAG, "Enterprise Username configure failed" );
                    ESP_GOTO_ON_ERROR( esp_wifi_sta_wpa2_ent_set_password( (uint8_t *) eapPass, strlen(eapPass) ), doWifiStationConnect_Return, TAG, "Enterprise Password configure failed" );
                    break;

                default:
                    doWifiStationDestroy();
                    return WifiStation_InvalidArg;
            }

            if (EnterpriseType == Enterprise_WifiStation_WPA3_192Bit)
                ESP_GOTO_ON_ERROR( esp_wifi_sta_wpa2_set_suiteb_192bit_certification(true), doWifiStationConnect_Return, TAG, "Enterprise 192-bit cert configure failed" );

            ESP_GOTO_ON_ERROR( esp_wifi_sta_wpa2_ent_enable(), doWifiStationConnect_Return, TAG, "Wi-Fi Enterprise enable failure" );
        }

        ESP_GOTO_ON_ERROR( esp_wifi_start(), doWifiStationConnect_Return, TAG, "Wi-Fi Start failed" );
        //ESP_GOTO_ON_ERROR( esp_wifi_connect(), doWifiStationConnect_Return, TAG, "Wi-Fi Connect failed" );

        ESP_LOGW(TAG, "Waiting for connection...");
        setWifiStationConnectState(WifiStationConnectState_CONNECTING);
        return WifiStation_Connecting;

    }else if(conn_state == WifiStationConnectState_CONNECTING){

        return WifiStation_Connecting;
    }

    eWifiStationStatus errorCode;
    wifi_ap_record_t ap_info;
    
    if (conn_state == WifiStationConnectState_CONNECTING_GOT_IP)
    {
        ESP_LOGI(TAG, "Connected");
        errorCode = WifiStation_Connected;
        ESP_GOTO_ON_ERROR( esp_wifi_sta_get_ap_info(&ap_info), doWifiStationConnect_Return, TAG, "Cannot get Wi-FI AP information" );
        // TODO - fix this
        /*snprintf(mac_output, MACIP_LENGTH - 1, "%02x:%02x:%02x:%02x:%02x:%02x",
                 ap_info.bssid[0], ap_info.bssid[1], ap_info.bssid[2], ap_info.bssid[3], ap_info.bssid[4], ap_info.bssid[5]);
        if(rssi){
            *rssi = (ehs_sint8) ap_info.rssi;
        }
        if(ip_address){
            ip_address = (ehs_char *) IP_Address;
        }
        if(mac_address){
            mac_address = (ehs_char *) mac_output;
        }*/
    }
    else if (conn_state == WifiStationConnectState_FAILED)
    {
        errorCode = WifiStation_StartFailed;
        ret = (ret == ESP_OK) ? ESP_FAIL : ret;
    }
    else 
    {
        errorCode = WifiStation_StateError;
        ret = (ret == ESP_OK) ? ESP_FAIL : ret;
    }

doWifiStationConnect_Return:

    if (ret != ESP_OK)
    {
        switch (ret) {
            case ESP_ERR_WIFI_STATE:        errorCode = WifiStation_StateError;     break;
            case ESP_ERR_WIFI_SSID:         errorCode = WifiStation_NotFound;       break;
            case ESP_ERR_WIFI_PASSWORD:     errorCode = WifiStation_AuthFailed;     break;
            case ESP_ERR_WIFI_TIMEOUT:      errorCode = WifiStation_Timeout;        break;
            case ESP_ERR_WIFI_NOT_STARTED:  errorCode = WifiStation_NotStarted;     break;
            case ESP_ERR_WIFI_NOT_STOPPED:  errorCode = WifiStation_NotStopped;     break;
            case ESP_ERR_WIFI_NOT_INIT:     errorCode = WifiStation_InitFailed;     break;
            default:                        errorCode = WifiStation_InternalError;  break;
        }
        doWifiStationDestroy();
    }

    return errorCode;
}

void doWifiStationDestroy()
{
    ESP_LOGW(TAG, "Destroy");
    esp_wifi_sta_wpa2_ent_clear_cert_key();
    if (serverCert_content != NULL) { free(serverCert_content); serverCert_content = NULL; }
    if (tlsCert_content != NULL) { free(tlsCert_content); tlsCert_content = NULL; }
    if (tlsKey_content != NULL) { free(tlsKey_content); tlsKey_content = NULL; }
    ESP_ERROR_CHECK_WITHOUT_ABORT(esp_wifi_disconnect());
    ESP_ERROR_CHECK_WITHOUT_ABORT(esp_wifi_stop());
    ESP_ERROR_CHECK_WITHOUT_ABORT(esp_event_handler_instance_unregister(IP_EVENT, IP_EVENT_STA_GOT_IP, instance_got_ip));
    ESP_ERROR_CHECK_WITHOUT_ABORT(esp_event_handler_instance_unregister(WIFI_EVENT, ESP_EVENT_ANY_ID, instance_any_id));
    ESP_ERROR_CHECK_WITHOUT_ABORT(esp_wifi_deinit());
    gTargetWifiStationConnected = EHS_FALSE; // @TODO - use callback
    gWifiStationInitalised = EHS_FALSE;
}

void doWifiStationDisconnect()
{
    ESP_ERROR_CHECK_WITHOUT_ABORT(esp_wifi_disconnect());
    ESP_ERROR_CHECK_WITHOUT_ABORT(esp_wifi_stop());
    gTargetWifiStationConnected = EHS_FALSE; // @TODO - use callback
}
